--- a/wiki/porn.wikitext
+++ b/wiki/porn.wikitext
@@ -10,10 +10,12 @@ Shortening of [[pornography|porn(ography)]].
 #(''informal; uncountable'') [[pornography]]
 #(''informal; countable'') a [[pornograhic]] film
 ===Synonyms===
-*[[porno]]
+adult movie, beaver (flick), beaver loop, beefcake film, blue flick, blue movie, bluey, cock-movie, cockfest, cinebonds, cinema XXX, cinemaroticism, cinemarotic, dirty movie, erotica, exibeeshes, flesh flick, fuck film, het film, horn movie, kiddie porn, kiddy porn, skin flick, snuff movie, stag movie, smut, X-rated, [[porno]] flick, pornographic (film/flick/movie).
 ===Translations===
 *{{fi}}: [[porno]], [[pornofilmi]]
 ===Related Terms===
 *[[porn film]]
 *[[porn shop]]
 *[[porn star]]
+===See Also===
+http://www.sex-lexis.com/Sex-Dictionary/porno%20film
