--- a/wiki/hooray.wikitext
+++ b/wiki/hooray.wikitext
@@ -2,7 +2,7 @@
 ===Etymology===
 First attested circa [[w:17th century|17th century]], alteration of [[huzzah]].
 
-===Interjection====
+===Interjection===
 '''hooray''' ''or'' '''hurray''' ''or'' '''hurrah'''
 #Used to express [[approval]], [[joy]] or [[victory]].
 ====Translation====
