--- a/wiki/full_stop.wikitext
+++ b/wiki/full_stop.wikitext
@@ -1,3 +1,4 @@
+{{Punctuation marks}}
 ==English==
 ===Noun===
 '''[[full]] [[stop]]''' (''plural'' '''full stops''')
@@ -33,5 +34,3 @@
 
 ====Translations====
 *Swedish: [[och därmed basta]]!, [[punkt slut]]
-
-{{Punctuation}}
