--- a/wiki/full_stop.wikitext
+++ b/wiki/full_stop.wikitext
@@ -1,5 +1,5 @@
-{{Punctuation marks}}
-==English==
+
+==English=={{Punctuation marks}}
 ===Noun===
 '''[[full]] [[stop]]''' (''plural'' '''full stops''')
 
