--- a/wiki/bracket.wikitext
+++ b/wiki/bracket.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English=={Punctuation marks}}
 
 ===Noun===
 '''bracket''' (plural: [[brackets]])
@@ -31,10 +31,5 @@
 *[[round bracket]]
 *[[square bracket]]
 
-===Verb===
-'''to bracket''' ([[bracketed]], bracketed)
-
-===See Also===
-{{Punctuation}}
 
 [[sv:bracket]]
