--- a/wiki/colon.wikitext
+++ b/wiki/colon.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English=={{Punctuation marks}}
 ===Noun===
 '''colon'''
 
@@ -38,6 +38,5 @@
 ====See also====
 *[[w:colon_(punctuation)|Wikipedia article on colons (in punctuation)]]
 *[[w:colon_(anatomy)|Wikipedia article on the colon (in anatomy)]]
-{{Punctuation}}
 
 [[pl:Colon]]
