--- a/wiki/comma.wikitext
+++ b/wiki/comma.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English=={{Punctuation marks}}
 ===Pronunciation===
 */kŏ'mə/, /ˈkɒma/, /"kQma/
 
@@ -23,10 +23,6 @@
 *Slovak: [[čiarka]] ''f'' (1)
 *Slovene: [[vejica]] ''f'' (1)
 *Spanish: [[vírgula]] ''f'', [[coma]] ''f'' (maybe only in Latin America)
-
-{{Punctuation}}
-
-----
 
 ==Italian==
 ===Noun===
