--- a/wiki/ellipsis.wikitext
+++ b/wiki/ellipsis.wikitext
@@ -1,4 +1,5 @@
+==English=={{Punctuation marks}}
 ===Noun===
-'''ellipsis''' (Plural: [[ellipses]])
-
+'''ellipsis''' (Plural: [[ellipses]]) {{wikipedia}}
+#A mark used in printing to indicate an omission
 [[it:ellipsis]]
