--- a/wiki/exclamation_mark.wikitext
+++ b/wiki/exclamation_mark.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English=={{Punctuation marks}}
 ===Noun===
 
 [[Image:Bang icon 32x32.jpg|!]] The symbol '''!''' is a called an ''exclamation mark'' or ''[[exclamation point]]''.  
@@ -30,7 +30,5 @@
 *[[！]] (fullwidth)
 *[[՜]] ([[Armenian]])
 *[[᥄]] ([[Limbu]])
-
-{{Punctuation}}
 
 [[it:exclamation mark]]
