--- a/wiki/hyphen.wikitext
+++ b/wiki/hyphen.wikitext
@@ -1,3 +1,4 @@
+==English=={{Punctuation marks}}
 ===Noun===
 '''hyphen''' (plural: [[hyphens]])
 
@@ -25,4 +26,3 @@
 ===See also===
 *[[dash]]
 *[[minus]], [[minus sign]]
-{{Punctuation}}
