--- a/wiki/interrobang.wikitext
+++ b/wiki/interrobang.wikitext
@@ -1,3 +1,3 @@
-{{-en-}}
+{{-en-}}{{Punctuation marks}}
 ===Noun===
 #The name of the symbol [[‽]] (a superimposed interrogation point and question point), used in place of [[!?]]
