--- a/wiki/quotation_mark.wikitext
+++ b/wiki/quotation_mark.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English=={{Punctuation marks}}
 ===Noun===
 #A [[symbol]] used to denote a [[quotation]] in writing, written at the beginning and end of the quotation. The symbols vary across languages, and slightly different marks are used for the beginning and end.  Those used in English are &#8220; ... &#8221, or " ... ", and &#8216; ... &#8217, or ' ... '.
 #*Example: &#8220;this is a quotation.&#8221; Here is another &#8216;another quotation.&#8217;
@@ -17,6 +17,3 @@
 *Italian: [[virgoletta]] ''f''
 *Slovene: [[narekovaj]] ''m''
 *Spanish: [[comilla]] ''f''
-
-==See Also==
-{{Punctuation}}
