--- a/wiki/semicolon.wikitext
+++ b/wiki/semicolon.wikitext
@@ -1,4 +1,4 @@
-==English==
+==English=={{Punctuation marks}}
 ===Noun===
 #(''typography'') The character ''';''' used:
 ##as a [[punctuation mark]] indicating a pause longer than the [[comma]] and shorter than a [[period]]/[[full stop]];
@@ -26,5 +26,3 @@
 *Slovene: [[podpičje]] ''n''
 *Spanish: [[punto y coma]] ''m''
 *Swedish: [[semikolon]]
-
-{{Punctuation}}
