format, pronunciation <sepulchral#49462>

--- a/wiki/sepulchral.wikitext
+++ b/wiki/sepulchral.wikitext
@@ -1,12 +1,16 @@
 ==English==
 ===Etymology===
-from Latin [[sepulcralis]]
+From Latin [[sepulcralis]]
+
+===Pronunciation===
+*{{IPAlink}} /səˈpʌlkrəl/ ''or'' /səˈpʊlkrəl/
+
 ===Adjective===
 '''sepulchral'''
+#Suggestive of a [[grave]]
 
-#suggestive of a [[grave]]
-===Related Words===
+===Related words===
 *[[sepulchre]]
 
-==See also==
-*[[Herõon]]
+===See also===
+*[[Heroon]]
