--- a/wiki/place.wikitext
+++ b/wiki/place.wikitext
@@ -9,8 +9,8 @@
 # [[Location]]; [[position]]; [[coordinate]]s in the [[w:space-time continuum|space-time continuum]]
 
 ====Translations====
-*[[German]]: [[:de:Platz|Platz]] (1); [[:de:Ort|Ort]], [[:de:Position|Position]] (3)
-* {{io}} : [[loko]], [[placo]] (public), [[plaso]] (someone)
+*German: [[:de:Platz|Platz]] (1); [[:de:Ort|Ort]], [[:de:Position|Position]] (3)
+*Ido: [[loko]], [[placo]] (public), [[plaso]] (someone)
 *Korean: [[자리]] (ja-ri), [[장소]] (jang-so)
 *Lithuanian: [[aikštė]] ''f'' (1); [[vieta]] ''f'' (3)
 *Swedish: [[plats]] (1,3)
@@ -24,10 +24,10 @@
 # To arrange for or to make; as ''place a bet''.
 
 ====Translations====
-*Chinese: [[difang]] (di4fang1)
-* {{fr}} : placer
-*[[German]]: [[:de:platzieren|platzieren]] (1, 3), [[einordnen]] (2)
-* {{io}} : [[pozar]] (1), [[lok-izar]] (2), [[kolokar]] (5)
+*Chinese: [[difang]] (dìfāng)
+*French: placer
+*German: [[:de:platzieren|platzieren]] (1, 3), [[einordnen]] (2)
+*Ido: [[pozar]] (1), [[lok-izar]] (2), [[kolokar]] (5)
 *Korean: [[위치하다]] (we-chi-ha-da: from noun [[위치]])
 *Swedish: [[placera]] (1,2,3)
 
