--- a/wiki/Hindustani.wikitext
+++ b/wiki/Hindustani.wikitext
@@ -2,7 +2,14 @@
 In persian "istan" means "land of", so Hindustan literally means "the land of the Hindus".
 
 ===Adjective===
-'''Hindustani''' (''plural'' '''Hindustanis''')
+'''Hindustani''' 
 
 # Related to India, or historically the entire Indian sub-continent.
+
+===Noun===
+'''Hindustani'''(''plural'' '''Hindustanis''')
+# A person from India (historically the entire Indian sub-continent)
+
+===Noun===
+'''Hindustani'''
 # An informal (colloquial) language made by blending parts of the Hindi and Urdu languages.
