/* Translations */ <ping pong#39742>

--- a/wiki/ping_pong.wikitext
+++ b/wiki/ping_pong.wikitext
@@ -11,7 +11,7 @@
 *[[ping pong ball]]
 
 ====Translations====
-*Chinese: [[乒乓球]] (pīngpang qiú)
+*Chinese: [[乒乓球]] (pīngpang qiú, pingpangqiu, ping1pang1qiu2)
 *Dutch: [[tafeltennis]] ''n''
 *Esperanto: [[tabloteniso]]
 *French: [[tennis de table]] ''m''
