--- a/wiki/%E7%9A%BF.wikitext
+++ b/wiki/%E7%9A%BF.wikitext
@@ -36,7 +36,7 @@
 == [[Japanese]] [[Kanji]] ==
 
 * '''Readings'''
-** '''[[On]]''': [[ばい]] (bai), [[みょう]] (myō)
+** '''[[On]]''': [[べい]] (bei), [[みょう]] (myō)
 ** '''[[Kun]]''': [[さら]] (sara)
 
 * '''Other info''':  
