+cat onomatopoeia <ping pong#39742>

--- a/wiki/ping_pong.wikitext
+++ b/wiki/ping_pong.wikitext
@@ -30,4 +30,6 @@
 *[[table tennis]]
 *[[w:Ping pong|Wikipedia article on ping pong]]
 
+[[Category: onomatopoeia]]
+
 <!-- there is a verb also but not sure if it's hyphenated, unhyphenated, or both -->
