big ol' overhaul <sepulchre#51776>

--- a/wiki/sepulchre.wikitext
+++ b/wiki/sepulchre.wikitext
@@ -1,3 +1,23 @@
-''n:'' A sacred burial place.  A tomb.
-also ''v.t.:'' to bury.
-Variant of ''sepulcher''.
+==English==
+===Alternative spellings===
+* (''chiefly US'') [[sepulcher]]
+
+===Alternative forms===
+* [[sepulture]]
+
+===Etymology===
+From Middle English and Old French [[sepulcre]], from Latin [[sepulcrum]]
+
+===Pronunciation===
+*{{IPA|/ˈsɛpəɫkə/ ''or'' /ˈsɛpəɫkɚ/}}
+*{{SAMPA}} /"sEp@5k@/
+
+===Noun===
+'''sepulchre''' (plural '''[[sepulchres]]''')
+# A [[burial chamber]]
+
+====Synonyms====
+* [[tomb]]
+
+[[Category:English nouns]]
+[[Category:Latin derivations]]
