alternative forms -> related terms <sepulchre#51776>

--- a/wiki/sepulchre.wikitext
+++ b/wiki/sepulchre.wikitext
@@ -2,9 +2,6 @@
 ===Alternative spellings===
 * (''chiefly US'') [[sepulcher]]
 
-===Alternative forms===
-* [[sepulture]]
-
 ===Etymology===
 From Middle English and Old French [[sepulcre]], from Latin [[sepulcrum]]
 
@@ -18,6 +15,9 @@ From Middle English and Old French [[sepulcre]], from Latin [[sepulcrum]]
 
 ====Synonyms====
 * [[tomb]]
+
+===Related terms===
+* [[sepulture]]
 
 [[Category:English nouns]]
 [[Category:Latin derivations]]
