--- a/wiki/jarra.wikitext
+++ b/wiki/jarra.wikitext
@@ -1,6 +1,6 @@
 == Spanish == 
 === Noun === 
-'''jarra''' ''f'' 
+'''jarra''' ''f'' '''jarro''' ''m''
 # [[jug]]; [[pitcher]]
 # [[stein]]; [[mug]]
 '''de jarras''' ''or'' '''en jarras'''
