<tt>SAMPA</tt> <sepulchre#51776>

--- a/wiki/sepulchre.wikitext
+++ b/wiki/sepulchre.wikitext
@@ -7,7 +7,7 @@ From Middle English and Old French [[sepulcre]], from Latin [[sepulcrum]]
 
 ===Pronunciation===
 *{{IPA|/ˈsɛpəɫkə/ ''or'' /ˈsɛpəɫkɚ/}}
-*{{SAMPA}} /"sEp@5k@/
+*{{SAMPA}} /<tt>"sEp@5k@</tt>/
 
 ===Noun===
 '''sepulchre''' (plural '''[[sepulchres]]''')
