--- a/wiki/%E7%8C%AA%E8%82%89.wikitext
+++ b/wiki/%E7%8C%AA%E8%82%89.wikitext
@@ -1,6 +1,6 @@
 ==Chinese==
 ===Noun===
-'''[[猪]][[肉]]''' (zhurou)(simplified; traditional equivalent: [[豬肉]])
+'''[[猪]][[肉]]''' (zhurou, zhu1rou4)(simplified; traditional equivalent: [[豬肉]])
 
 # [[pork]]
 [[Category:Chinese nouns|Zhurou]]
