fix template <sepulchral#49462>

--- a/wiki/sepulchral.wikitext
+++ b/wiki/sepulchral.wikitext
@@ -3,7 +3,7 @@
 From Latin [[sepulcralis]]
 
 ===Pronunciation===
-*{{IPAlink}} /səˈpʌlkrəl/ ''or'' /səˈpʊlkrəl/
+*{{IPA|/səˈpʌlkrəl/ ''or'' /səˈpʊlkrəl/}}
 
 ===Adjective===
 '''sepulchral'''
