--- a/wiki/giblets.wikitext
+++ b/wiki/giblets.wikitext
@@ -5,6 +5,7 @@
 #The [[internal organ]]s of a bird used as [[poultry]], these organs being used as food.
 
 ====Translations====
+*Chinese: [[shijian]], [[shi2jian4]]
 *French: abats ''pl''
 *Italian: [[frattaglie]] ''f plural''
 
