--- a/wiki/jej%C3%A9n.wikitext
+++ b/wiki/jej%C3%A9n.wikitext
@@ -3,3 +3,5 @@
 '''jején''' ''m'' '''jejenes''' ''plural''
 # [[gnat]] 
 [[Category:Spanish nouns]]
+[[Category:Es:Animals]]
+[[Category:Es:Insects]]
