<over the top#99951>

--- a/wiki/over_the_top.wikitext
+++ b/wiki/over_the_top.wikitext
@@ -6,3 +6,6 @@
 
 ===Alternative forms===
 '''over-the-top'''
+
+===Usage note===
+'''Over-the-top''' is used where the adjective occurs before the word it modifies, whereas '''over the top''' occurs only following a [[copula]] as the object of a sentence.
