example for usage note. Thanks Wytukaze.  (Go team IRC!) <over the top#99951>

--- a/wiki/over_the_top.wikitext
+++ b/wiki/over_the_top.wikitext
@@ -8,4 +8,6 @@
 '''over-the-top'''
 
 ===Usage note===
-'''Over-the-top''' is used where the adjective occurs before the word it modifies, whereas '''over the top''' occurs only following a [[copula]] as the object of a sentence.
+*'''Over the top''' occurs only following a [[copula]] as the object of a sentence, as above, whereas 
+*'''Over-the-top''' is used where the adjective occurs before the word it modifies, as
+*:''He gave an '''over-the-top''' performance.''
