--- a/wiki/jerez.wikitext
+++ b/wiki/jerez.wikitext
@@ -7,6 +7,8 @@
 ----
 ==Spanish==
 ===Noun===
-'''jerez''' ''m''
-
+'''jerez''' ''m'' '''jereces''' ''plural''
 #[[sherry]]
+
+[[Category:Es:Food]]
+[[Category:Spanish nouns]]
