--- a/wiki/suicide_Tuesday.wikitext
+++ b/wiki/suicide_Tuesday.wikitext
@@ -1,6 +1,6 @@
 '''Suicide Tuesday''' (or '''Tuesday blues''', '''Ecstasy Tuesday''') is a slang term for the depressive period following the use of [[Ecstasy (drug)|Ecstasy]]. 
 
-Ecstasy causes [[euphoria]] by stimulating the release of stored [[seratonin]] in the brain. However, low seratonin levels persist for days following use. These low seratonin levels induce [[depression]] and possibly [[suicide]]. 
+Ecstasy causes [[euphoria]] by stimulating the release of stored [[serotonin]] in the brain. However, low serotonin levels persist for days following use. These low serotonin levels induce [[depression]] and possibly [[suicide]]. 
 
 Hence, the name ''suicide tuesday'' refers to the propensity of people to use Ectasy on Saturday night through to the late hours of Sunday morning, sleep off the effects on monday, and go into depression on Tuesday. 
 
