--- a/wiki/sento.wikitext
+++ b/wiki/sento.wikitext
@@ -4,4 +4,4 @@ sènto, /ˈsɛnto/, /<tt>"sEnto</tt>/
 ===Verb form===
 '''sento'''
 
-# ''first-person singular indicative present of [[sintire]]''
+# ''first-person singular indicative present of [[sentire]]''
