--- a/wiki/goldfish.wikitext
+++ b/wiki/goldfish.wikitext
@@ -1,8 +1,9 @@
 ===Noun===
-'''goldfinch'''
+'''goldfish'''
 
 # fish, usually [[orange]] colored
 
 ==== Translations ====
+{{checktrans}}
 *Dutch: [[goudvis]] ''m''
 *Latin: [[Cordulelis elegans]]
