corrected an entry that appeared to have been about gold*fish* <goldfinch#99979>

--- a/wiki/goldfinch.wikitext
+++ b/wiki/goldfinch.wikitext
@@ -1,1 +1,6 @@
-#REDIRECT [[Goldfish]]
+==English==
+===Noun===
+'''goldfinch'''
+{{wikipedia}}
+European Goldfinch, [[Carduelis carduelis]]
+# a small [[passerine]] [[bird]] of the [[finch]] family.
