--- a/wiki/sic.wikitext
+++ b/wiki/sic.wikitext
@@ -1,7 +1,8 @@
+==English==
 ===Pronunciation===
 *[[w:AHD|AHD]]: sĭk
 *[[w:IPA|IPA]]: /sɪk/
-*[[w:SAMPA|SAMPA]]: /sIk/
+*[[w:SAMPA|SAMPA]]: /<tt>sIk</tt>/
 
 ===Etymology===
 :from the Latin ''sic'', meaning ''thus'' or ''so''.
@@ -12,7 +13,7 @@
 ===Adverb===
 '''sic'''
 
-#thus; thus written 
+# [[thus]]; thus written 
 #:Used in quoted material (usually between brackets, "[]") to indicate that a previous phrase or word was quoted as it was in the source, despite the fact that it contains an error, often a grammatical error. ''Sic'' is also used following a word or phrase that contains an intentional error.
 
 ==== Example ====
@@ -23,7 +24,7 @@
 
 # to incite an attack, especially by dogs.
 
-==See also==
+===See also===
 
 * ''sic passim'': The preceding word, phrase, or term will be used in the same manner (or form) throughout the text
 * ''sic transit gloria mundi'' (thus passes the glory of the world): The end of an important era
