plural, american species <goldfinch#99979>

--- a/wiki/goldfinch.wikitext
+++ b/wiki/goldfinch.wikitext
@@ -1,6 +1,7 @@
 ==English==
 ===Noun===
-'''goldfinch'''
+'''goldfinch''' (plural '''goldfinches''')
 {{wikipedia}}
 European Goldfinch, [[Carduelis carduelis]]
-# a small [[passerine]] [[bird]] of the [[finch]] family.
+American Goldfinch, [[Carduelis tristis]]
+# A small [[passerine]] [[bird]] of the [[finch]] family.
