wrong button, damn <goldfinch#99979>

--- a/wiki/goldfinch.wikitext
+++ b/wiki/goldfinch.wikitext
@@ -2,6 +2,5 @@
 ===Noun===
 '''goldfinch''' (plural '''goldfinches''')
 {{wikipedia}}
-European Goldfinch, [[Carduelis carduelis]]
-American Goldfinch, [[Carduelis tristis]]
+European Goldfinch, [[Carduelis carduelis]]; American Goldfinch, [[Carduelis tristis]]
 # A small [[passerine]] [[bird]] of the [[finch]] family.
