--- a/wiki/nascondere.wikitext
+++ b/wiki/nascondere.wikitext
@@ -21,23 +21,23 @@
 {| style="background:#F0F0F0"
 
 |-
-! colspan="3" style="background:#e2e4c0" | [[infinitive]]
+! colspan="3" style="background:#e2e4c0" | infinitive
 | colspan="5" | nascondere
 
 |-
-! colspan="3" style="background:#e2e4c0" | [[gerund]]
+! colspan="3" style="background:#e2e4c0" | gerund
 | colspan="5" | nascondendo
 
 |-
-! colspan="3" style="background:#e2e4c0" | [[present participle]]
+! colspan="3" style="background:#e2e4c0" | present participle
 | colspan="5" | [[nascondente]]
 
 |-
-! colspan="3" style="background:#e2e4c0" | [[past participle]]
+! colspan="3" style="background:#e2e4c0" | past participle
 | colspan="5" | [[nascosto]], (''archaic'') nascoso
 
 |-
-! colspan="2" rowspan="2" style="background:#C0C0C0" | [[person]]
+! colspan="2" rowspan="2" style="background:#C0C0C0" | person
 ! colspan="3" style="background:#C0C0C0" | singular
 ! colspan="3" style="background:#C0C0C0" | plural
 
@@ -50,7 +50,7 @@
 ! style="background:#C0C0C0;width:12.5%" | third
 
 |-
-! style="background:#c0cfe4" rowspan="5"| [[indicative|indic-ative]]
+! style="background:#c0cfe4" rowspan="5"| indic-ative
 ! style="background:#c0cfe4" | 
 ! style="background:#c0cfe4" | io
 ! style="background:#c0cfe4" | tu
@@ -60,7 +60,7 @@
 ! style="background:#c0cfe4" | loro
 
 |-
-! style="height:3em;background:#c0cfe4" | [[present]]
+! style="height:3em;background:#c0cfe4" | present
 | nascondo
 | nascondi
 | nasconde
@@ -69,7 +69,7 @@
 | nascon-dono
 
 |-
-! style="height:3em;background:#c0cfe4" | [[imperfect|imper-fect]]
+! style="height:3em;background:#c0cfe4" | imper-fect
 | nascondevo
 | nascondevi
 | nascondeva
@@ -78,7 +78,7 @@
 | nascon-devano
 
 |-
-! style="height:3em;background:#c0cfe4" | [[passato remoto]]
+! style="height:3em;background:#c0cfe4" | passato remoto
 | nascosi
 | nascondesti
 | nascose
@@ -87,7 +87,7 @@
 | nascosero
 
 |-
-! style="height:3em;background:#c0cfe4" | [[future]]
+! style="height:3em;background:#c0cfe4" | future
 | nasconderò
 | nascon-derai
 | nasconderà
@@ -96,7 +96,7 @@
 | nascon-deranno
 
 |-
-! style="height:3em;background:#c0cfe4" colspan="2"| [[conditional]]
+! style="height:3em;background:#c0cfe4" colspan="2"| conditional
 | nasconderei
 | nascon-deresti
 | nasconde-rebbe
@@ -105,7 +105,7 @@
 | nasconde-rebbero
 
 |-
-! style="background:#c0e4c0" rowspan="3" | [[subjunctive|subjunc-tive]]
+! style="background:#c0e4c0" rowspan="3" | subjunc-tive
 ! style="background:#c0e4c0" |
 ! style="background:#c0e4c0" | che io
 ! style="background:#c0e4c0" | che tu
@@ -133,7 +133,7 @@
 | nascon-dessero
 
 |-
-! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | [[imperative]]
+! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | imperative
 ! style="background:#e4d4c0" | -
 ! style="background:#e4d4c0" | tu
 ! style="background:#e4d4c0" | lui/lei
