attributive adjective:  mock Spanish -> mock-Spanish <el cheapo#99988>

--- a/wiki/el_cheapo.wikitext
+++ b/wiki/el_cheapo.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Spanish article [[el]] + English [[cheap]] + [[mock]] Spanish -o
+Spanish article [[el]] + English [[cheap]] + [[mock]]-Spanish -o
 
 ===Adjecive===
 '''el cheapo'''
