/* Translations to be checked */ fix Greek <tin#4780>

--- a/wiki/tin.wikitext
+++ b/wiki/tin.wikitext
@@ -141,7 +141,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Breton]]: [[staen]] ''m'' (1), [[boest]] ''f plural'' boestoù, [[boest mir]] (2)
 *Chinese: [[罐头]], [[鑵頭]] (2)
 *Dutch: [[blik]] ''n'' (2), [[tinnen pot]] ''m'' (3)
-*Greek, Modern: [[Κασσιτερος]] '' '' (1) (should not be capitalised)
+*Greek, Modern: [[κασσίτερος]] ''m'' (1) (should not be capitalised)
 *Indonesian: [[kaleng]] (2, 3)
 *[[Interlingua]]: ([[cassa]] de) [[latta]] (2, 3)
 *Portuguese: [[lata]] (2, 3)
