--- a/wiki/tin.wikitext
+++ b/wiki/tin.wikitext
@@ -6,7 +6,7 @@
 ===Pronunciation===
 *[[AHD]]: /tĭn/
 *[[IPA]]: /tɪn/
-*[[SAMPA]]: /tIn/
+*[[SAMPA]]: /<tt>tIn</tt>/
 *:[[Rhymes:English:-ɪn|-ɪn]]
 
 ===Noun===
@@ -28,7 +28,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *[[Afrikaans]]: tin
 *Albanian: [[kalaj]]
 *Arabic: [[قصدير]]
@@ -67,7 +67,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
 *Japanese: [[錫]] ([[スズ]], [[すず]], suzu)
 *[[Kashmiri]]: [[cëna]]
 *[[Kazakh]]: [[къалайы]]
@@ -106,15 +106,15 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *French: [[boîte]] ''f''
 *German: [[Büchse]] ''f'', [[Konservenbüchse]] ''f'', [[Blechbüchse]] ''f'', [[Dose]] ''f'', [[Konservendose]] ''f''
-*Italian: [[barattolo]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
+*Italian: [[barattolo]] ''m''
 |}
 |}
 
@@ -123,13 +123,13 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *German: [[Backform]] ''f'' (''for baking''), [[Kastenform]] ''f'' (''for cakes''), [[Kuchenform]] ''f'' (''for cakes'')
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
 |}
 |}
 
@@ -141,7 +141,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Breton]]: [[staen]] ''m'' (1), [[boest]] ''f plural'' boestoù, [[boest mir]] (2)
 *Chinese: [[罐头]], [[鑵頭]] (2)
 *Dutch: [[blik]] ''n'' (2), [[tinnen pot]] ''m'' (3)
-*Greek, Modern: [[κασσίτερος]] ''m'' (1) (should not be capitalised)
+*Greek, Modern: [[κασσίτερος]] ''m'' (1)
 *Indonesian: [[kaleng]] (2, 3)
 *[[Interlingua]]: ([[cassa]] de) [[latta]] (2, 3)
 *Portuguese: [[lata]] (2, 3)
@@ -159,19 +159,19 @@ The translations below need to be checked by native speakers and inserted into t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to K go here-->
+<!--left column-->
 *[[Breton]]: [[staen]]
 *Bulgarian: [[калаен]] ''m'', калаена ''f'', калаено ''n'', калаени ''plural''; [[тенекиен]] ''m'', тенекиена ''f'', тенекиено ''n'', тенекиени ''plural''
 *Dutch: [[tinnen]]
 *French: d'[[étain]], en étain
 *{{de}}: [[Zinn]]- (combined with noun), [[zinnen]] (rare)
-*[[Interlingua]]: de [[latta]]; de [[stanno]]
-*Italian: di [[stagno]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from L to Z go here-->
+<!--right column-->
+*[[Interlingua]]: de [[latta]]; de [[stanno]]
+*Italian: di [[stagno]]
 *Polish:  [[cynowy]] ''m'', [[cynowa]] ''f'', [[cynowe]] ''n''
 *Portuguese: de [[lata]], de [[estanho]]
 *Romanian: de [[cositor]], din cositor
@@ -192,13 +192,13 @@ The translations below need to be checked by native speakers and inserted into t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *{{de}}: [[eindosen]], [[einmachen]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
 |}
 |}
 '''cover with tin'''
@@ -206,13 +206,13 @@ The translations below need to be checked by native speakers and inserted into t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *{{de}}: [[verzinnen]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
 *Portuguese: [[cobrir]] com [[estanho]]
 |}
 |}
@@ -222,13 +222,13 @@ The translations below need to be checked by native speakers and inserted into t
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *{{de}}: [[vorverzinnen]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
 |}
 |}
 
@@ -255,7 +255,7 @@ http://elements.vanderkrogt.net/elem/sn.html
 ==Dutch==
 ===Pronunciation===
 *[[IPA]]: /tɪn/
-*[[SAMPA]]: /tIn/
+*[[SAMPA]]: /<tt>tIn</tt>/
 
 ===Noun===
 '''tin'''
