--- a/wiki/workbench.wikitext
+++ b/wiki/workbench.wikitext
@@ -4,4 +4,7 @@
 #A [[sturdy]] [[bench]] or [[table]] at which [[manual]] [[work]] is done by a [[carpenter]], [[machinist]] and so on
 [[Category:English nouns]]
 
+===Translations===
+*{{pt}}: bancada
+
 [[pt:workbench]]
