--- a/wiki/ollam.wikitext
+++ b/wiki/ollam.wikitext
@@ -1,4 +1,4 @@
-In [[Irish language|Irish '''Ollam''' or '''Ollamh''' (anglicised '''Ollave''' or '''Ollav'''), is a master in a particular trade or skill. In early [[Irish Literature]] it generally refers to the highest rank of [[Fili]]. In modern Irish it means "[[professor]]".
+In [[Irish language|Irish]] '''Ollam''' or '''Ollamh''' (anglicised '''Ollave''' or '''Ollav'''), is a master in a particular trade or skill. In early [[Irish Literature]] it generally refers to the highest rank of [[Fili]]. In modern Irish it means "[[professor]]".
 
 {{Lit-stub}}
 
