/* Noun */ wikify.  Good job! <hoi polloi#100005>

--- a/wiki/hoi_polloi.wikitext
+++ b/wiki/hoi_polloi.wikitext
@@ -8,9 +8,8 @@ From Greek [[οἱ]] (hoi, ''the'') and [[πολλοί]] (polloi, ''many'')
 
 ===Noun===
 '''hoi polloi''' (''uncountable'')
-# Common people; the masses
-# The elite
-
+# [[Common]] [[people]]; the [[masses]]
+# The [[elite]]
 ====Synonyms====
 (''common people'')
 * [[rabble]]
