if only i could spell... <joyería#100010>

--- a/wiki/joyer%C3%ADa.wikitext
+++ b/wiki/joyer%C3%ADa.wikitext
@@ -1,8 +1,8 @@
 == Spanish == 
 === Noun === 
 '''joyería''' ''f'' 
-# [[jewelery]] store
+# [[jewelry]] store
 # jewelery
 '''joyería de fantasía''' 
-# [[costume]] [[jewelery]]
+# [[costume]] [[jewelry]]
 [[Category:Spanish nouns]]
