--- a/wiki/zealot.wikitext
+++ b/wiki/zealot.wikitext
@@ -3,7 +3,7 @@
 * [[Wiktionary:Pronunciation_key|IPA]]: /ˈzɛlət/ (plural /ˈzɛləts/)
 
 ===Noun===
-'''zealot''' (plural '''zealots''')
+'''zealot''' (plural '''zealots'''
 # one who is [[zealous]], one who is full of [[zeal]] for his own specific beliefs or objectives, usually in the negative sense of being ''too'' passionate; a [[fanatic]]
 
 # a member of the Zealot Movement, a modern Christian devoted to the original teachings of Christ as articulated by the ''4 Pillars''.  (''see www.zealotmovement.com '') 
