--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -23,6 +23,7 @@
 *Bulgarian: [[Турция]] (Turcija)
 *Catalan: [[Turquia]]
 *Chinese: [[土耳其]] (Tǔ'ěrqí)
+*Chinese pinyin: [[Turkey]], [[Tu'erqi]], [[Tu3'er3qi2]]
 *Czech: [[Turecko]]
 *Danish: [[Tyrkiet]]
 *Dutch: [[Turkije]]
