--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -110,6 +110,7 @@
 *Bulgarian: [[пуйка]] ''f''
 *Catalan: [[gall dindi]], [[polla d’índia (paó)]]
 *Chinese: [[火鸡]] (huǒjī)
+*Chinese pinyin: [[huoji]], [[huo3ji1]]
 *Croatian: [[puran]]
 *Czech: [[krocan]] ''m'', [[krůta]] ''f''
 *Danish: [[kalkun]]
