/* Derived terms */ +cold turkey <turkey#2760>

--- a/wiki/turkey.wikitext
+++ b/wiki/turkey.wikitext
@@ -89,8 +89,9 @@
 *(''stupid person''): [[fool]], [[idiot]], [[jerk]] (''US''), [[plonker]] (''UK''), [[prat]] (''UK'')
 
 ====Derived terms====
-*[[turkey vulture]]
+*[[cold turkey]]
 *[[go full turkey]]
+*[[turkey vulture]]
 
 ==== Translations ====
 
