--- a/wiki/Perica.wikitext
+++ b/wiki/Perica.wikitext
@@ -1,3 +1,5 @@
 ==Croatian==
 ===Proper noun===
 #A male [[given name]], which is the diminutive form of [[Pero]].
+====Translations====
+*English: [[Pete]]
