--- a/wiki/pero.wikitext
+++ b/wiki/pero.wikitext
@@ -1,8 +1,13 @@
 ==Croatian==
+===Noun===
+'''pero'''
+
+#[[feather]]
+
 ===Proper noun===
 '''Pero'''
 
-#A male [[given name]], whose diminutive form is [[Perica]].
+#A male [[given name]], whose English equivalent is [[Pete]].
 
 ----
 
