--- a/wiki/Perica.wikitext
+++ b/wiki/Perica.wikitext
@@ -1,5 +1,3 @@
 ==Croatian==
 ===Proper noun===
-#A male [[given name]], which is the diminutive form of [[Pero]].
-====Translations====
-*English: [[Pete]]
+#A male [[given name]], which is the diminutive form of [[Pero]]; and whose English equivalent is [[Pete]].
