--- a/wiki/Perica.wikitext
+++ b/wiki/Perica.wikitext
@@ -1,3 +1,6 @@
 ==Croatian==
+
 ===Proper noun===
+'''Perica'''
+
 #A male [[given name]], which is the diminutive form of [[Pero]]; and whose English equivalent is [[Pete]].
