/* Proper noun */ <Perica#99107>

--- a/wiki/Perica.wikitext
+++ b/wiki/Perica.wikitext
@@ -3,4 +3,4 @@
 ===Proper noun===
 '''Perica'''
 
-#A male [[given name]], which is the diminutive form of [[Pero]]; and whose English equivalent is [[Pete]].
+#A male [[given name]] which is the diminutive form of [[Pero]], and whose English equivalent is [[Pete]].
