/* Translations */ <good morning#64276>

--- a/wiki/good_morning.wikitext
+++ b/wiki/good_morning.wikitext
@@ -12,6 +12,7 @@
 
 ====Translations====
 
+*Chinese Pinyin: zaoshang hao.
 *Dutch: [[goedemorgen]]
 *Esperanto: [[bonan matenon]]
 *French: [[bonjour]]           <!-- That's "hello"?  Shouldn't it be Bon Matins?  -->
