/* Translations */ <good evening#70890>

--- a/wiki/good_evening.wikitext
+++ b/wiki/good_evening.wikitext
@@ -10,6 +10,7 @@
 *[[:Category:Greetings]]
 
 ====Translations====
+*Chinese: wanshang hao
 *{{fr}}: [[bonsoir]]
 *{{de}}: [[Guten Abend]]
 *{{hu}}: [[Jó estét]]
