/* Translations */ <good night#70892>

--- a/wiki/good_night.wikitext
+++ b/wiki/good_night.wikitext
@@ -16,6 +16,7 @@ UK English does not normally compound words as in America.  In American English,
 *[[good morning]]
 
 ====Translations====
+*Chinese: [[wan'an]]
 *French: [[bonne nuit]]
 *German: [[Gute Nacht]]
 *Spanish: [[buenas noches]]
