--- a/wiki/pero.wikitext
+++ b/wiki/pero.wikitext
@@ -28,10 +28,18 @@
 ----
 
 ==Italian==
+===Pronunciation===
+péro, /ˈpero/, /<tt>"pero</tt>/
 ===Noun===
 '''pero''' ''m''
 
 #[[pear tree]]
+
+===Related terms===
+*[[pera]]
+
+===See also===
+*[[però]]
 
 ----
 
