--- a/wiki/quitter.wikitext
+++ b/wiki/quitter.wikitext
@@ -7,5 +7,14 @@
 #One who [[quit]]s.
 #A [[deliverer]].
 
+----
+
+==French==
+===Verb===
+'''quitter'''
+
+# to [[leave]]
+# to [[part]]
+
 [[et:Quitter]]
 [[fr:quitter]]
