--- a/wiki/%E6%99%82%E3%80%85.wikitext
+++ b/wiki/%E6%99%82%E3%80%85.wikitext
@@ -2,5 +2,6 @@
 ===Etymology===
 [[Reduplication]] (with [[rendaku]]) of '''[[時]]''' (toki), ''time''.
 ===Adverb===
-'''時々''' (tokidoki)
+'''時々''' (ときどき, tokidoki)
+
 #[[sometimes]], from time to time
