--- a/wiki/percuotere.wikitext
+++ b/wiki/percuotere.wikitext
@@ -47,7 +47,7 @@
 ! style="background:#C0C0C0;width:12.5%" | third
 
 |-
-! rowspan="6" style="background:#c0cfe4" | [[indicative]]
+! rowspan="5" style="background:#c0cfe4" | indic-ative
 
 ! style="background:#c0cfe4" colspan="1" | 
 ! style="background:#c0cfe4" | io
@@ -67,7 +67,7 @@
 | percuotono
 
 |-
-! style="height:3em;background:#c0cfe4" | [[imperfect]]
+! style="height:3em;background:#c0cfe4" | imper-fect
 | percotevo, percuotevo
 | percotevi, percuotevi
 | percoteva, percuoteva
@@ -76,7 +76,7 @@
 | percotevano, percuotevano
 
 |-
-! style="height:3em;background:#c0cfe4" | [[passato remoto]]
+! style="height:3em;background:#c0cfe4" | passato remoto
 | percossi
 | percotesti, percuotesti
 | percosse
@@ -85,7 +85,7 @@
 | percossero
 
 |-
-! style="height:3em;background:#c0cfe4" | [[future]]
+! style="height:3em;background:#c0cfe4" | future
 | percoterò, percuoterò
 | percoterai, percuoterai
 | percoterà, percuoterà
@@ -94,7 +94,7 @@
 | percoteranno, percuoteranno
 
 |-
-! style="height:3em;background:#c0cfe4" | [[conditional]]
+! style="height:3em;background:#c0cfe4" colspan="2" | conditional
 | percoterei, percuoterei
 | percoteresti, percuoteresti
 | percoterebbe, percuoterebbe
@@ -103,7 +103,7 @@
 | percotebbero, percuotebbero
 
 |-
-! rowspan="3" style="background:#c0e4c0" |[[subjunctive]]
+! rowspan="3" style="background:#c0e4c0" | subjunc-tive
 ! style="background:#c0e4c0" | 
 ! style="background:#c0e4c0" | che io
 ! style="background:#c0e4c0" | che tu
@@ -122,7 +122,7 @@
 | percuotano
 
 |-
-! style="height:3em;background:#c0e4c0" rowspan="1" | imperfect
+! style="height:3em;background:#c0e4c0" rowspan="1" | imper-fect
 | percotessi, percuotessi
 | percotessi, percuotessi
 | percotesse, percuotesse
@@ -131,7 +131,7 @@
 | percotessero, percuotessero
 
 |-
-! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | [[imperative]]
+! colspan="2" rowspan="2" style="height:3em;background:#e4d4c0" | imperative
 ! style="background:#e4d4c0" | -
 ! style="background:#e4d4c0" | tu
 ! style="background:#e4d4c0" | lui/lei
