--- a/wiki/jubilaci%C3%B3n.wikitext
+++ b/wiki/jubilaci%C3%B3n.wikitext
@@ -1,3 +1,6 @@
+===Etymology===
+From Latin '''[[jubilatio]]''', ''rejoicing'', from verb '''[[jubilare]]''', ''rejoice'', originally from Hebrew
+
 == Spanish == 
 === Noun === 
 '''jubilación''' ''f'' '''jubilaciones''' ''plural''
@@ -7,3 +10,6 @@
 === Synonyms ===
 *[[pensión]]
 [[Category:Spanish nouns]]
+
+===Related Terms===
+*[[jubilee]]
