irreperable -> irreparable; "a Torah" is capitalized and does not refer to a bound volume; the Hebrew ends with the letter "heh" <Torah#61033>

--- a/wiki/Torah.wikitext
+++ b/wiki/Torah.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-Hebrew for [[תור]], meaning ''law'' or ''teaching''.
+Hebrew [[תורה]], meaning ''law'' or ''teaching''.
 
 ===Proper Noun===
 '''Torah'''
@@ -10,15 +10,15 @@ Hebrew for [[תור]], meaning ''law'' or ''teaching''.
 # The first five books of the Hebrew Scriptures, attributed to Moses.
 #: ''Tradition holds that the Torah was handed down to Moses on Mount Sinai.''
 # The full body of written [[Jewish]] law, including the [[Tanakh]], the [[Talmud]], the [[Mishnah]] and the [[midrashic]] texts.
-#: ''It says in the Torah that both gossip and murder cause irreperable damage.''
+#: ''It says in the Torah that both gossip and murder cause irreparable damage.''
 # The whole of Jewish law, written and unwritten.
 # The encompassing philosophy of Judaism.
 
 ===Noun===
-'''torah''' <!-- Or is it or can it be capitalized? -->
+'''Torah''' <!-- capitalized (compare with: "swear on a Bible") -->
 
-# A book or scroll containing the five books of Moses.
-#: ''An anonymous donor has provided us with a lovely new torah.''
+# A specially written scroll containing the five books of Moses.
+#: ''An anonymous donor has provided us with a lovely new Torah.''
 
 ===See also===
 *[[Five Books of Moses]]
@@ -30,4 +30,4 @@ Hebrew for [[תור]], meaning ''law'' or ''teaching''.
 *[[w:Torah|Wikipedia article on Torah]]
 
 ====Translations====
-*Hebrew: [[תור]]
+*Hebrew: [[תורה]]
