--- a/wiki/%E9%80%A3.wikitext
+++ b/wiki/%E9%80%A3.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate forms''': [[连]], [[連]]
+* '''Alternate forms''': [[连]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 162''': [[Wiktionary:Chinese radical index 辵|辵]]+7 strokes
 
@@ -10,7 +10,9 @@
 
 * '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 卜十田十 (YJWJ)
 
-* '''Graphical Significance and Origin''': 
+* '''Graphical Significance and Origin''': stringing vehicles
+
+* ''Cognate characters:''' [[漣]], [[輦]]; [[列]]
 
 * '''Common Meaning'''
 *# [[join]], [[connect]]
@@ -44,6 +46,30 @@
 * '''Readings'''
 ** '''[[On]]''': [[れん]] (ren)
 ** '''[[Kun]]''': [[つらなる]] (tsuranaru), [[つれる]] (tsureru), [[しきりに]] (shikirini)
+
+===Compounds===
+*[[連関]]
+*[[連休]]
+*[[連繋]]
+*[[連結]]
+*[[連呼]]
+*[[連行]]
+*[[連衡]]
+*[[連合]]
+*[[連鎖]]
+*[[連座]]
+*[[連載]]
+*[[連日]]
+*[[連声]]
+*[[連想]]
+*[[連続]]
+*[[連濁]]
+*[[連中]]
+*[[連動]]
+*[[連盟]]
+*[[連絡]]
+*[[連理]]
+*[[関連]]
 
 * '''Other info''':  
 
