--- a/wiki/%E9%80%A3.wikitext
+++ b/wiki/%E9%80%A3.wikitext
@@ -12,7 +12,7 @@
 
 * '''Graphical Significance and Origin''': stringing vehicles
 
-* ''Cognate characters:''' [[漣]], [[輦]]; [[列]]
+* '''Cognate characters:''' [[漣]], [[輦]]; [[列]]
 
 * '''Common Meaning'''
 *# [[join]], [[connect]]
