--- a/wiki/humoresque.wikitext
+++ b/wiki/humoresque.wikitext
@@ -2,4 +2,4 @@
 ===Noun===
 '''Humoresque'''
 
-# In music, a composition that is playful in attitude and tone.
+# In music, a [[composition]] that is playful in attitude and tone.
