--- a/wiki/%E8%BF%9E.wikitext
+++ b/wiki/%E8%BF%9E.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#join, connect
-*# continuous
+*# [[join]], [[connect]]
+*# [[continuous]]
 *# even
-
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,6 +33,36 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[連]]
+
+===Compounds===
+*[[连比]]
+*[[连鬓胡子]]
+*[[连词]]
+*[[连带]]
+*[[连…带…]]
+*[[连滚带爬]]
+*[[连击]]
+*[[连接]]
+*[[连接号]]
+*[[连理]]
+*[[连理枝]]
+*[[连连]]
+*[[连忙]]
+*[[连年]]
+*[[连气儿]]
+*[[连翘]]
+*[[连锁]]
+*[[连锁店]]
+*[[连声]]
+*[[连书]]
+*[[连体]]
+*[[连同]]
+*[[连写]]
+*[[连续]]
+*[[连夜]]
+*[[连用]]
+*[[连珠]]
+*[[连作]]
 
 * '''Other info''': 
 
