--- a/wiki/enero.wikitext
+++ b/wiki/enero.wikitext
@@ -4,8 +4,10 @@
 **'''Next:''' [[Febrero]]
 ===Noun===
 '''Enero'''
-#The first [[month]] of  [[Spain]], having 31 [[day]]s.
 #[[January]]
+
+[[Category:Spanish nouns]]
+[[Category:Spanish months]]
 
 ===Pronunciation===
 *eh-neh'-rroh
