--- a/wiki/rendaku.wikitext
+++ b/wiki/rendaku.wikitext
@@ -1,7 +1,7 @@
 ==English==
 {{wikipedia}}
 ===Etymology===
-From Japanese '''[[連濁]]''' (rendaku), ''group voicing''.
+From Japanese '''[[連濁]]''' (rendaku), ''sequential voicing''.
 ===Noun===
 '''rendaku'''
 #(''linguistics'') In the [[Japanese]] language, a phenomenon which governs the [[voicing]] of the initial [[consonant]] of the non-initial portion of a [[compound]] or [[prefix]]ed word.
