--- a/wiki/%E7%BE%8E%E5%BE%B7.wikitext
+++ b/wiki/%E7%BE%8E%E5%BE%B7.wikitext
@@ -1,9 +1,10 @@
 == Chinese [[Hanzi]] ==
 ===Noun===
-[[美]][[德]] (meide)
+[[美]][[德]] (meide, mei3de2)
 
 # [[virtue]]
 ----
+
 ==Japanese==
 kyujitai
 *See [[美徳]]
