--- a/wiki/marzo.wikitext
+++ b/wiki/marzo.wikitext
@@ -6,6 +6,13 @@ From Latin ([[mensis]]) '''[[Martius]]''', (month) of the Roman god [[Mars]].
 '''marzo''' ''m''
 
 #[[March]] (''the month'')
+----
+== Spanish == 
+=== Noun === 
+'''marzo''' ''m'' 
+# [[March]] 
+[[Category:Spanish nouns]]
+[[Category:Spanish months]]
 
 [[fr:marzo]]
 [[gl:Marzo]]
