--- a/wiki/abril.wikitext
+++ b/wiki/abril.wikitext
@@ -10,7 +10,7 @@
 '''Abril'''
 #The fourth [[month]] of the [[Philippines]], having 30 [[day]]s.
 #[[April]]
-
+----
 ==Portuguese==
 
 '''a.bril''' ''m''
@@ -19,3 +19,10 @@
 
 ===See also===
 [[janeiro]], [[fevereiro]], [[março]], [[abril]], [[maio]], [[junho]], [[julho]], [[agosto]], [[setembro]], [[outubro]], [[novembro]], [[dezembro]]
+----
+== Spanish == 
+=== Noun === 
+'''abril''' ''m'' 
+# [[April]] 
+[[Category:Spanish nouns]]
+[[Category:Spanish months]]
