--- a/wiki/mayo.wikitext
+++ b/wiki/mayo.wikitext
@@ -10,11 +10,18 @@
 '''Mayo'''
 #The fifth [[month]] of the [[Philippines]], having 31 [[day]]s.
 #[[May]]
-
+----
 ==Ido==
 ===Noun===
 # the month of May.
 [[Category: Ido language]]
+----
+== Spanish == 
+=== Noun === 
+'''mayo''' ''m'' 
+# [[May]] 
+[[Category:Spanish nouns]]
+[[Category:Spanish months]]
 
 [[en:Mayo]]
 [[nl:mayo]]
