--- a/wiki/agosto.wikitext
+++ b/wiki/agosto.wikitext
@@ -17,20 +17,22 @@
 ===Proper noun===
 # August.
 [[Category: Ido language]]
-
-
-
+----
 ==Portuguese==
 '''a.gos.to'''
-
 ===Pronunciation===
-
 ===Noun===
-
 #[[August]] (month). In Portuguese, the names of months are usualy not capitalized.
 
-==See also==
+====See also====
 [[janeiro]], [[fevereiro]], [[março]], [[abril]], [[maio]], [[junho]], [[julho]], [[agosto]], [[setembro]], [[outubro]], [[novembro]], [[dezembro]]
+----
+== Spanish == 
+=== Noun === 
+'''agosto''' ''m'' 
+# [[August]] 
+[[Category:Spanish nouns]]
+[[Category:Spanish months]]
 
 [[de:agosto]]
 [[fr:agosto]]
