--- a/wiki/junco.wikitext
+++ b/wiki/junco.wikitext
@@ -1,7 +1,13 @@
 ==English==
-
 ===Noun===
-
 '''junco'''
-
 #Any bird of the genus Junco, which includes several species of North American finches; -- called also snowbird, or blue snowbird.
+----
+
+== Spanish == 
+=== Noun === 
+'''junco''' ''m'' 
+# [[reed]]; [[rush]]
+# [[junk]] (a small boat)
+[[Category:Spanish nouns]]
+[[Category:Es:Plants]]
