--- a/wiki/divertimento.wikitext
+++ b/wiki/divertimento.wikitext
@@ -2,4 +2,4 @@
 
 === Noun ===
 
-# In music, a [[composition]] that has many short [[movements]], which [[composers]] started to use in the [[Eighteenth Century]].
+# In music, a [[composition]] that has many short [[movements]], a style that [[composers]] started to use in the [[Eighteenth Century]].
