--- a/wiki/%E7%BE%8E%E5%BE%B7.wikitext
+++ b/wiki/%E7%BE%8E%E5%BE%B7.wikitext
@@ -1,6 +1,6 @@
 == Chinese [[Hanzi]] ==
 ===Noun===
-[[美]][[德]] (meide, mei3de2)
+[[美]][[德]] (mĕidé, mei3de2)
 
 # [[virtue]]
 ----
@@ -8,6 +8,7 @@
 ==Japanese==
 kyujitai
 *See [[美徳]]
+
 ----
 
 == Korean [[Hanja]] ==
