--- a/wiki/tea.wikitext
+++ b/wiki/tea.wikitext
@@ -40,7 +40,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Chinese pinyin: [[chaye]], [[cha2ye4]]
+*Chinese: [[茶叶]] (cháyè)
 *Finnish: [[tee#Finnish|tee]]
 *{{fr}}: [[thé]] ''m''
 *German: [[Teeblatt]] ''n'', [[Teeblätter]] ''pl''
@@ -72,7 +72,6 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 *Basque: [[te#Basque|te]]
 *Bulgarian: [[чай#Bulgarian|чай]] (čaj) ''m''
 *Chinese: [[茶]] (chá)
-*Chinese pinyin: [[cha]], [[cha2]]
 *Croatian: [[čaj#Croatian|čaj]] ''m''
 *Czech: [[čaj#Czech|čaj]] ''m''
 *Danish: [[te#Danish|te]] ''c''
@@ -207,7 +206,7 @@ The translations below need to be checked by native speakers and inserted into t
 *{{ja}}: [[茶]] (ちゃ, cha), [[お茶]] ([[おちゃ]], o-chá, ''with the honorific prefix''); [[緑茶]] (りょくちゃ, ryokuchá, green tea); [[紅茶]] (こうちゃ, kōcha, ''black tea'')
 *Malay: [[ca]], [[teh]]
 *Slovene: [[čaj#Slovene|čaj]] ''m''
-*{{bo}}: [[ཇ་]] (za)
+*[[Tibetan]]: [[ཇ་]] (za)
 *Turkish: [[çay]]
 
 ===Derived terms===
