--- a/wiki/divertimento.wikitext
+++ b/wiki/divertimento.wikitext
@@ -3,3 +3,16 @@
 === Noun ===
 
 # In music, a [[composition]] that has many short [[movements]], a style that [[composers]] started to use in the [[Eighteenth Century]].
+
+----
+
+==Italian==
+===Pronunciation===
+divertiménto, /divertiˈmento/, /<tt>deverti"mento</tt>/
+===Noun===
+'''divertimento''' ''m''
+
+# [[fun]], [[amusement]], [[entertainment]]
+
+===Related terms===
+*[[divertire]]
