--- a/wiki/divertimento.wikitext
+++ b/wiki/divertimento.wikitext
@@ -14,5 +14,9 @@ divertiménto, /divertiˈmento/, /<tt>deverti"mento</tt>/
 
 # [[fun]], [[amusement]], [[entertainment]]
 
+====Synonyms====
+*[[diletto]]
+*[[svago]]
+
 ===Related terms===
 *[[divertire]]
