--- a/wiki/junta.wikitext
+++ b/wiki/junta.wikitext
@@ -1,7 +1,12 @@
 ==English==
-
 ===Noun===
-
 '''junta'''
-
 #A council; a convention; a tribunal; an assembly; esp., the grand council of state in Spain.
+----
+== Spanish == 
+=== Noun === 
+'''junta''' ''f'' 
+# [[council]] 
+# [[joint]]; [[gasket]]
+# [[meeting]]
+[[Category:Spanish nouns]]
