/* Adjective */ fmt <ardent#59880>

--- a/wiki/ardent.wikitext
+++ b/wiki/ardent.wikitext
@@ -1,6 +1,8 @@
 =={{en}}==
+==English==
 ===Adjective===
-# burning
+'''ardent'''
+# [[burn]]ing
 # full of [[ardour]]; [[fervent]], [[passionate]]
 
 [[et:Ardent]]
