/* Noun Phrase */ <file extension#99855>

--- a/wiki/file_extension.wikitext
+++ b/wiki/file_extension.wikitext
@@ -1,8 +1,9 @@
 ==English==
 ===Noun Phrase===
-[[file]] [[extension]]
+'''[[file]] [[extension]]'''
 # A short series of letters or numerals at the end of a [[computer]] file name, used to indicate the type of file and the [[software]] that will be required to operate or open it.
 #: A text file will have a '''file extension''' of .txt .
+
 ===Related Terms===
 *[[8.3]]
 *[[filename extension]]
