/* Noun */ fmt, some exp <bias#45890>

--- a/wiki/bias.wikitext
+++ b/wiki/bias.wikitext
@@ -1,7 +1,9 @@
 ==English==
+==English==
 ===Noun===
-# [[inclination]] towards something; [[predisposition]], [[partiality]], [[prejudice]], [[preference]], [[prediliction]]
-# (textile) the diagonal line between [[warp]] and [[weft]] in a [[woven]] [[fabric]]
+'''bias'''
+# (countable or uncountable) [[inclination]] towards something; [[predisposition]], [[partiality]], [[prejudice]], [[preference]], [[prediliction]]
+# (countable) (textile) the diagonal line between [[warp]] and [[weft]] in a [[woven]] [[fabric]]
 # (electronics) a voltage or current applied for example to a transistor electrode
 
 ====Translations====
