--- a/wiki/ardent.wikitext
+++ b/wiki/ardent.wikitext
@@ -1,9 +1,13 @@
-=={{en}}==
 ==English==
+===Etymology===
+Latin "burning"
 ===Adjective===
 '''ardent'''
 # [[burn]]ing
 # full of [[ardour]]; [[fervent]], [[passionate]]
+
+===Related terms===
+*[[ardently]]
 
 [[et:Ardent]]
 [[it:ardent]]
